# PyStoch

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: api.md  citing.md  conf.py  index.md  installation.md  parameters.md  usage.md
pystoch/: __init__.py  _logging.py  detectors.py  pystoch_class_and_mapping.py  pystoch_functions.py
pystoch/cli/: __init__.py  convert_frames.py  make_maps.py  read_frames.py
pystoch/data/: parameters.ini
tests/: test_api.py  test_frame_loading.py  test_logging.py  test_regression.py  test_units.py  test_version.py
