[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystoch"
version = "1.2.3"
description = "A Python package for Stochastic Gravitational Wave background map-making from folded data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Anirban Ain", email = "anirban.ain@ligo.org" },
    { name = "Jishnu Suresh", email = "jishnu.suresh@ligo.org" },
    { name = "Sudhagar Suyamprakasam", email = "sudhagar.suyamprakasam@ligo.org" },
    { name = "Sanjit Mitra", email = "sanjit.mitra@ligo.org" },
]
keywords = ["gravitational-waves", "stochastic", "SGWB", "healpix", "map-making"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "healpy",
    "astropy",
    "h5py",
    "tqdm",
    "gwpy",
]

[project.urls]
Homepage = "https://github.com/jishnu-suresh/PyStoch"
Documentation = "https://pystoch.readthedocs.io"
Source = "https://github.com/jishnu-suresh/PyStoch"
Issues = "https://github.com/jishnu-suresh/PyStoch/issues"

[project.scripts]
read_frames = "pystoch.cli.read_frames:main"
convert_frames = "pystoch.cli.convert_frames:main"
pystoch = "pystoch.cli.make_maps:main"

[tool.setuptools]
packages = ["pystoch", "pystoch.cli"]

[tool.setuptools.package-data]
pystoch = ["data/*.ini"]
